{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 139,
  "lineage": "eedcbf04-4391-f69c-39ab-b8c43d8fd4dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022164e98f4a3db16",
            "arn": "arn:aws:ec2:us-east-1:762595429056:elastic-ip/eipalloc-022164e98f4a3db16",
            "association_id": "eipassoc-051d03b490d36408e",
            "domain": "vpc",
            "id": "eipalloc-022164e98f4a3db16",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07e434f7f6e64c843",
            "private_dns": "ip-172-16-1-190.ec2.internal",
            "private_ip": "172.16.1.190",
            "public_dns": "ec2-13-223-111-145.compute-1.amazonaws.com",
            "public_ip": "13.223.111.145",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-api-gateway-nat-eip"
            },
            "tags_all": {
              "Name": "learn-api-gateway-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "eipalloc-022164e98f4a3db16",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:internet-gateway/igw-06c941b9e8f12e475",
            "id": "igw-06c941b9e8f12e475",
            "owner_id": "762595429056",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-api-gateway-igw"
            },
            "tags_all": {
              "Name": "learn-api-gateway-igw"
            },
            "vpc_id": "vpc-0c6e9a0be4f9c4633"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "igw-06c941b9e8f12e475",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022164e98f4a3db16",
            "association_id": "eipassoc-051d03b490d36408e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0c555e111038853e1",
            "network_interface_id": "eni-07e434f7f6e64c843",
            "private_ip": "172.16.1.190",
            "public_ip": "13.223.111.145",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d99655e84f88d119",
            "tags": {
              "Name": "learn-api-gateway-nat-gw"
            },
            "tags_all": {
              "Name": "learn-api-gateway-nat-gw"
            },
            "vpc_id": "vpc-0c6e9a0be4f9c4633"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "nat-0c555e111038853e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:route-table/rtb-0ddc071ed93ac6e83",
            "id": "rtb-0ddc071ed93ac6e83",
            "owner_id": "762595429056",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c555e111038853e1",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "learn-api-gateway-private-rt"
            },
            "tags_all": {
              "Name": "learn-api-gateway-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6e9a0be4f9c4633"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "rtb-0ddc071ed93ac6e83",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:route-table/rtb-0f21b28525ff3e3ca",
            "id": "rtb-0f21b28525ff3e3ca",
            "owner_id": "762595429056",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c941b9e8f12e475",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "learn-api-gateway-public-rt"
            },
            "tags_all": {
              "Name": "learn-api-gateway-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6e9a0be4f9c4633"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "rtb-0f21b28525ff3e3ca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5877809a75f4d3f",
            "region": "us-east-1",
            "route_table_id": "rtb-0ddc071ed93ac6e83",
            "subnet_id": "subnet-032d269613c8da663"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "rtbassoc-0d5877809a75f4d3f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05857b674d78ad801",
            "region": "us-east-1",
            "route_table_id": "rtb-0ddc071ed93ac6e83",
            "subnet_id": "subnet-0060e43b75f17b41b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "rtbassoc-05857b674d78ad801",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf96ca67d85f0cd7",
            "region": "us-east-1",
            "route_table_id": "rtb-0f21b28525ff3e3ca",
            "subnet_id": "subnet-0d99655e84f88d119"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "rtbassoc-0bf96ca67d85f0cd7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012b2ec9c00f4f2d6",
            "region": "us-east-1",
            "route_table_id": "rtb-0f21b28525ff3e3ca",
            "subnet_id": "subnet-013da7b4c06070144"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "rtbassoc-012b2ec9c00f4f2d6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-032d269613c8da663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032d269613c8da663",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-api-gateway-private-us-east-1a"
            },
            "tags_all": {
              "Name": "learn-api-gateway-private-us-east-1a"
            },
            "vpc_id": "vpc-0c6e9a0be4f9c4633"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "subnet-032d269613c8da663",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-0060e43b75f17b41b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0060e43b75f17b41b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-api-gateway-private-us-east-1b"
            },
            "tags_all": {
              "Name": "learn-api-gateway-private-us-east-1b"
            },
            "vpc_id": "vpc-0c6e9a0be4f9c4633"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "subnet-0060e43b75f17b41b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-0d99655e84f88d119",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d99655e84f88d119",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-api-gateway-public-us-east-1a"
            },
            "tags_all": {
              "Name": "learn-api-gateway-public-us-east-1a"
            },
            "vpc_id": "vpc-0c6e9a0be4f9c4633"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "subnet-0d99655e84f88d119",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:subnet/subnet-013da7b4c06070144",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013da7b4c06070144",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "762595429056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-api-gateway-public-us-east-1b"
            },
            "tags_all": {
              "Name": "learn-api-gateway-public-us-east-1b"
            },
            "vpc_id": "vpc-0c6e9a0be4f9c4633"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "subnet-013da7b4c06070144",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762595429056:vpc/vpc-0c6e9a0be4f9c4633",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-00f60df2168f24263",
            "default_route_table_id": "rtb-075b531648abc7af4",
            "default_security_group_id": "sg-01ee519d9cd558d58",
            "dhcp_options_id": "dopt-015d302a35bf5e9c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6e9a0be4f9c4633",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-075b531648abc7af4",
            "owner_id": "762595429056",
            "region": "us-east-1",
            "tags": {
              "Name": "learn-api-gateway"
            },
            "tags_all": {
              "Name": "learn-api-gateway"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "762595429056",
            "id": "vpc-0c6e9a0be4f9c4633",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}